--- a/roles/test-client/tasks/main.yml
+++ b/roles/test-client/tasks/main.yml
@@ -18,7 +18,7 @@
     creates: '{{dottraceCmdLineDir}}'
 - name: Copy sampling script
   win_copy:
-    src: dottrace-on-thinkFolio.ps1
+    src: dottrace-on-test.ps1
     dest: '{{dottraceSamplingScriptsDir}}\'
 - name: Create snapshots directory
   win_file:
@@ -27,10 +27,10 @@
 - name: Create dottrace-sampling Scheduled Task
   win_scheduled_task:
     name: dottrace-sampling
-    path: \thinkFolio
+    path: \test
     actions:
     - path: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
-      arguments: -Command "& '{{dottraceSamplingScriptsDir}}\dottrace-on-thinkFolio.ps1' '{{dottraceCmdLineDir}}\dottrace.exe' '{{dottraceSnapshotsDir}}' '{{s3BucketForSamples}}' {{sampleDurationSec}}" *> "{{dottraceSnapshotsDir}}\dottrace-script-thinkFolio-$(get-date -f yyyy-MM-ddTHHmmss.fff).log"
+      arguments: -Command "& '{{dottraceSamplingScriptsDir}}\dottrace-on-test.ps1' '{{dottraceCmdLineDir}}\dottrace.exe' '{{dottraceSnapshotsDir}}' '{{s3BucketForSamples}}' {{sampleDurationSec}}" *> "{{dottraceSnapshotsDir}}\dottrace-script-test-$(get-date -f yyyy-MM-ddTHHmmss.fff).log"
     triggers:
     - type: registration
       enabled: yes
