--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,8 +1,10 @@
 
 namespace: "fain_ansible_testing"
 name: "ansible_collection_test"
-version: "1.0.4"
+version: "1.0.5"
 readme: "README.md"
 authors:
     - "Fain Street"
 description: "testing ansible collection install from github repo"
+dependencies:
+    "signalfx.splunk_otel_collector": "0.10.0"
